fix bug in doc generation
when documenting a route we don't have to specify the full prefix of the
endpoint (i.e. that /api/v1 prefix).
